css/work_experience_card.css
.work-experience {
	flex: 1;
	max-width: 400px;
	height: 280px;

	overflow: clip;

	border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;

    background-color: var(--bgcolor-darkblue);
    box-shadow: rgb(80 78 78 / 50%) 0px 0px 10px;

    transition: all 500ms ease, height 600ms ease;
}

.work-experience:hover {	
	box-shadow: var(--hover-blue) 0px 0px 10px;
	
	flex: 2;
	max-width: 800px;
	height: 800px;

	transition: all 1s ease, height 500ms ease;
}

@media screen and (max-width: 992px) {
	.work-experience {			
		flex: 2;
		max-width: 800px;
		height: 800px;
	
		transition: all 1s ease, height 500ms ease;
	}

	.work-experience .project__stack {
		font-size: 1.7rem;
	}

	.we-container {
		flex-direction: column !important;
	}
}

.work-experience .project__image_container {
    display: inline-block;
    overflow: hidden;
    width: 100%;
    height: 225px;

    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
}

.work-experience img {
    object-fit: cover;
    width: 100%;
    height: 100%;
}

.work-experience .project__name {
    color: white;
    font-size: 2rem;
}

.work-experience .project__description {
    color: white;
    height: 110px;
}

.work-experience .project__stack {
    color: #2861b8;
    font-size: 1.4rem;

	transition: 200ms;
}

.work-experience:hover .project__stack {
	font-size: 1.7rem;
}

.work-experience .project__stack_list li {
    color: rgb(216, 216, 216);
    font-weight: 600;
    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
             0px 8px 13px rgba(0,0,0,0.1),
             0px 18px 23px rgba(0,0,0,0.1);
}

.work-experience .project-card-btn {
    background-color: hsl(216, 49%, 42%);
    border: 2px solid hsl(216, 49%, 42%);

    border-radius: 10px;

    transition: all 100ms ease-in-out;
    text-decoration: none;
    color: rgb(29, 29, 29);
    cursor: pointer;

    font-weight: 600;
}

.work-experience .project-card-btn:hover {
    display: inline-block;
    background-color: hsl(216, 67%, 59%);
    border: 2px solid hsl(216, 67%, 59%);

    color: rgb(48, 48, 48);
}

.we-details {
    background-color: var(--bgcolor-darkblue)!important;
    padding: 1rem 2rem;
}

.we-title {
    color: var(--font-light-gray);
    font-size: 2rem;
}

.we-section {
    padding: 1rem 0;
}

.we-header {
    color: var(--font-light-gray);

    padding-bottom: 0.25rem;
    font-size: 1.5rem;
}

.we-description {
    color: #8892B0;
    font-size: 1.15rem;
}

/* Magic */
.work-experience .we-section:nth-child(1) {
	opacity: 0;

	transition-delay: 50ms;
	transition-duration: 500ms;
	transition-property: opacity;
}
.work-experience:hover .we-section:nth-child(1) {
	opacity: 1;
	transition-delay: 100ms;
}

.work-experience .we-section:nth-child(2) {
	opacity: 0;

	transition-delay: 50ms;
	transition-duration: 500ms;
	transition-property: opacity;
}
.work-experience:hover .we-section:nth-child(2) {
	opacity: 1;
	transition-delay: 700ms;
}

.work-experience .we-section:nth-child(3) {
	opacity: 0;

	transition-delay: 50ms;
	transition-duration: 500ms;
	transition-property: opacity;
}
.work-experience:hover .we-section:nth-child(3) {
	opacity: 1;
	transition-delay: 1200ms;
}

